# langchain-tutorial

./: .env_example  .gitignore  README.md  pyproject.toml
src/1_langchain/: 1_chat_models.ipynb  2_prompt_templates.ipynb  2_prompts.ipynb  3_chains.ipynb  4_chat_memory.ipynb  4_rag.ipynb  5_agents_and_tools.ipynb  5_rag.ipynb  6_agents.ipynb  7_streaming.ipynb
src/2_langgraph/: 1_sequential.ipynb  2_conditional_edges.ipynb  3_looping.ipynb  4_agent.ipynb  5_react_agent.ipynb  6_draft.ipynb
src/3_langsmith/: 1_basic.ipynb
