[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.4",
    "langsmith>=0.4.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
